<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/startGameScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <LinearLayout
                android:id="@+id/startGameMainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startGameTravelLogButton"
                    style="@style/style_start_game_menu_button"
                    android:onClick="showTravelLog"
                    android:text="@string/startGameTravelLogButtonText" />

                <Button
                    android:id="@+id/startGameItemButton"
                    style="@style/style_start_game_menu_button"
                    android:onClick="showItem"
                    android:text="@string/startGameItemButtonText" />

                <Button
                    android:id="@+id/startGameMapButton"
                    style="@style/style_start_game_menu_button"
                    android:onClick="showMap"
                    android:text="@string/startGameMapButtonText" />

                <Button
                    android:id="@+id/startGameTravelListButton"
                    style="@style/style_start_game_menu_button"
                    android:onClick="showTravelList"
                    android:text="@string/startGameTravelListButtonText" />

                <Button
                    android:id="@+id/startGamePlayerButton"
                    style="@style/style_start_game_menu_button"
                    android:onClick="showPlayer"
                    android:text="@string/startGamePlayerButtonText" />

                <Button
                    android:id="@+id/startGameEventButton"
                    style="@style/style_start_game_menu_button"
                    android:onClick="showEvent"
                    android:text="@string/startGameEventButtonText" />

                <Button
                    android:id="@+id/startGameProductionButton"
                    style="@style/style_start_game_menu_button"
                    android:onClick="showProduction"
                    android:text="@string/startGameProductionButtonText" />

                <Button
                    android:id="@+id/startGameCalenderButton"
                    style="@style/style_start_game_menu_button"
                    android:onClick="showCalendar"
                    android:text="@string/startGameCalenderButtonText" />

                <Button
                    android:id="@+id/startGameSystemButton"
                    style="@style/style_start_game_menu_button"
                    android:onClick="showSystem"
                    android:text="@string/startGameSystemButtonText" />
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>