<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/createPlayerNameTextView"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/createPlayerNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/createPlayerNameEditText"
                        android:ems="10"
                        android:hint="@string/createPlayerNameEditText"
                        android:inputType="text"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/createPlayerSexTextView"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/createPlayerSexEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/createPlayerNameEditText"
                        android:ems="10"
                        android:hint="@string/createPlayerSexEditText"
                        android:inputType="text"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/createPlayerAgeTextView"
                        android:textSize="30sp" />

                    <EditText
                        android:id="@+id/createPlayerAgeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/createPlayerNameEditText"
                        android:ems="10"
                        android:hint="@string/createPlayerAgeEditText"
                        android:inputType="number"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/createPlayerRollButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#2196F3"
                        android:text="@string/createPlayerRollButton"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/createPlayerStatusTextView"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/createPlayerFinishButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:text="@string/createPlayerFinishButtonText"
            android:textSize="30sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>